<!--
  ~ Copyright (c) 2016-2017 Jan Felix Schmidt <janschmidt@mailbox.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">LedgerJournal</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_templates"> Templates</string>

    <string name="layout_transaction_date">Date</string>
    <string name="layout_transaction_payee">Payee</string>
    <string name="layout_posting_accounthint">Your:Account</string>

    <string name="preference_exportpath_title">Export Directory</string>
    <string name="preference_exportpath_summary">Exported .led files are saved in this directory.</string>
    <string name="preference_dateformat_title">Date Format</string>
    <string name="preference_dateformat_default">yyyy/MM/dd</string>
    <string name="preference_currency_title">Currency</string>
    <string name="preference_currency_default">$</string>
    <string name="preference_currpos_off_summary">Currency is shown in front of amount.</string>
    <string name="preference_currpos_on_summary">Currency is shown behind amount.</string>
    <string name="preference_currpos_title">Currency Position</string>
    <string name="preference_dateformat_summary">Date of new transactions is filled out in this way.</string>
    <string name="preference_currency_summary">New transactions use this currency.</string>
    <string name="preference_delete_title">Delete after Export</string>
    <string name="preference_delete_summary">Transactions can be deleted automatically after export to avoid exporting them twice.</string>
    <string name="preference_delete_entries_never">never delete transactions</string>
    <string name="preference_delete_entries_ask">ask me after every export</string>
    <string name="preference_delete_entries_always">always delete exported transactions automatically</string>

    <string name="dialog_replacetemplate">Replace Template for Payee</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_addjournal">Add a new Journal</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_deletejournal">Really delete this Journal?</string>
    <string name="dialog_deleteexported_1">Delete all</string>
    <string name="dialog_deleteexported_2">transactions just exported from</string>
    <string name="dialog_deleteexported_3">\?</string>

    <string name="context_main_rename">rename Journal</string>
    <string name="context_main_delete">delete Journal</string>
    <string name="context_journal_edit">edit transaction</string>
    <string name="context_journal_delete">delete transaction</string>
    <string name="context_journal_template">add to templates</string>

    <string name="toast_maxpostings">Maximum number of Postings reached.</string>
    <string name="toast_addtemplate">Added Transaction to Templates.</string>
    <string name="toast_exportfile">Wrote file</string>
    <string name="toast_exportfile_error">Error writing file</string>
    <string name="toast_permission_denied">LedgerJournal was not allowed to write to your storage. Hence, it cannot export the Journal.</string>
    <string name="toast_permission_granted">Thanks. Try to export again.</string>
    <string name="share_subject">export</string>

    <string name="db_templates_topfname">Templates</string>
    <string name="db_templates_acc_cash">Expenses:Cash</string>
    <string name="db_templates_acc_groceries">Expenses:Groceries</string>
    <string name="db_templates_acc_giro">Assets:Checking</string>
    <string name="db_templates_acc_gastro">Expenses:Gastronomy</string>
    <string name="preference_category_input">Input </string>
    <string name="preference_category_export">Export </string>
    <string name="menu_main_about">About </string>
    <string name="layout_settings_title">LedgerJournal Settings</string>
    <string name="toast_replacetemplate">Replaced Template for</string>
    <string name="preference_exportwidth_title">Line Width</string>
    <string name="preference_exportwidth_summary">Set the width of lines in .led files. You set the number of characters for the account.</string>
    <string name="toast_numberFormatError">Amount has invalid number format</string>
</resources>
