<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/preference_category_input">
        <EditTextPreference
            android:title="@string/preference_dateformat_title"
            android:key="dateformat"
            android:defaultValue="@string/preference_dateformat_default"
            android:summary="@string/preference_dateformat_summary"
            android:inputType="text" />
        <EditTextPreference
            android:title="@string/preference_currency_title"
            android:key="currency"
            android:defaultValue="@string/preference_currency_default"
            android:summary="@string/preference_currency_summary"
            android:inputType="text" />
        <SwitchPreference
            android:title="@string/preference_currpos_title"
            android:key="currpos"
            android:summaryOff="@string/preference_currpos_off_summary"
            android:summaryOn="@string/preference_currpos_on_summary"
            android:textOn=""
            android:textOff=""
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_export">
    <EditTextPreference
        android:title="@string/preference_exportpath_title"
        android:key="exportpath"
        android:summary="@string/preference_exportpath_summary"
        android:inputType="text" />
    <ListPreference
        android:title="@string/preference_delete_title"
        android:key="delete"
        android:entries="@array/preference_delete_entries"
        android:entryValues="@array/preference_delete_entryvalues"
        android:defaultValue="never"
        android:summary="@string/preference_delete_summary" />
        <EditTextPreference
            android:title="@string/preference_exportwidth_title"
            android:key="exportwidth"
            android:summary="@string/preference_exportwidth_summary"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="35" />
    </PreferenceCategory>

</PreferenceScreen>