<!--
  ~ Copyright (c) 2016-2017 Jan Felix Schmidt <janschmidt@mailbox.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/context_journal_edit"
        android:title="@string/context_journal_edit" />
    <item
        android:id="@+id/context_journal_delete"
        android:title="@string/context_journal_delete" />
    <item
        android:id="@+id/context_journal_template"
        android:title="@string/context_journal_template" />
</menu>
